tests-integration/tests/roundtrip/invalid/semantic/typecheck/int_var_in_set_expr/input.essence
letting s be {1, 2, 3}
find i : int(1..10)
such that i subset s
